<resources>
    <string name="app_name">plavebniTesty</string>
    
    
    <string name="prihlasovaci_obrazovka_uvod">Vítám Vás v aplikaci Plavební testy.\n\nMůžete se zde bezplatně připravit na zkoušky pro všehny druhy plavidel.</string>
    <string name="prihlasovaci_obrazovka_nazev">Dobrý den</string>
    <string name="prihlasovaci_obrazovka_prohlaseni">Aplikace je bezplatná a neodesílá žádná data mimo mobil. Tento projekt je čistě koníčkem, kdyby Vám proto něco chybělo nebo byste měli nějaký nápad či problém, neváhejte mě prosím kontaktovat.</string>
    <string name="text_uspesnost">Počet úspěšných pokusů:</string>
    <string name="jmeno">Jméno</string>
    <string name="prijmeni">Příjmení</string>
    <string name="tlacitko_dale">Dále</string>
    <string name="testy">Testy</string>
    <string name="vudce_maleho_plavidla">Vůdce malého plavidla</string>
    <string name="vudce_plavidla_cr">Vůdce plavidla ČR</string>
    <string name="kormidelnik_cr">Kormidelník ČR</string>
    <string name="kvalifikovany_lodnik_cr">Kvalifikovaný lodník ČR</string>
    <string name="lodnik_cr">Lodník ČR</string>
    <string name="spustit_poporade">Spustit popořadě</string>
    <string name="zamichat_a_spustit">Zamíchat a spustit</string>
    <string name="text_pochopeno">Počet otázek v kategorii Pochopeno:</string>
    <string name="text_nejisty">Počet otázek v kategorii Nejistý:</string>
    <string name="text_problematicky">Počet otázek v kategorii Problematické:</string>
    <string name="text_nezarazeno">Počet otázek v kategorii Nezařazeno:</string>
    <string name="otazky">Otázky</string>
    <string name="uzivatelska_tapeta">Uživatelem zvolená tapeta</string>
    <string name="hlavni_title">Plavební testy</string>
    <string name="close">Close</string>
    <string name="nastaveni">Nastavení</string>
    <string name="jmeno_aplikace">Plavební testy</string>
    <string name="menu">Menu</string>
    <string name="kategorie">Kategorie</string>
    <string name="o_aplikaci">O aplikaci</string>
    <string name="o_aplikaci_uvod">Tuto aplikaci jsem si vytvořil za účelem pochopení a procvičení práce s jazykem Kotlin a vývojem aplikací pro platformu Android. Pokud máte jakékoliv dotazy nebo potřebujete další informace, neváhejte mě kontaktovat na adrese mmatess25@gmail.com. Jsem rád, že vám mohu pomoci!</string>
    <string name="o_aplikaci_recenze">Spokojené recene od našich zákazníků</string>
    <string name="podporit">Podpořit</string>
    <string name="pridat_kategorie_pochopene">Přidat do kategorie Pochopené</string>
    <string name="pridat_kategorie_nejiste">Přidat do kategorie Nejisté</string>
    <string name="pridat_kategorie_problematicke">Přidat do kategorie Problematické</string>
    <string name="pridat_kategorie_dalsi">Další otázka</string>
    <string name="odpoved_a">Odpověď A</string>
    <string name="odpoved_b">Odpověď B</string>
    <string name="odpoved_c">Odpověď C</string>
    <string name="nastaveni_uvodni_foto">Úvodní fotografie</string>
    <string name="nastaveni_profil_foto">Profilové fotografie</string>
    <string name="svetle_modre_theme">Světle modré theme</string>
    <string name="tmave_modre_theme">Tmavě modré theme</string>
    <string name="zluto_cervene_theme">Žluto červené theme</string>
    <string name="bilo_cerne_theme">Bílo černé theme</string>
</resources>