<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <include layout="@layout/navigacni_lista" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:text="@string/o_aplikaci" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="20dp"
        android:textSize="18sp"
        android:lineHeight="25sp"
        android:textColor="@color/white"
        android:text="@string/o_aplikaci_uvod"/>

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/o_aplikaci_recenze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/about" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/zaoblene_tlacitko"
        android:layout_marginHorizontal="20dp"
        android:text="@string/podporit" />


</LinearLayout>